--- a/AIND-Simulated_Annealing.ipynb
+++ b/AIND-Simulated_Annealing.ipynb
@@ -133,7 +133,20 @@
     "    AIMA simulated_annealing() pseudocode\n",
     "        https://github.com/aimacode/aima-pseudocode/blob/master/md/Simulated-Annealing.md\n",
     "    \"\"\"     \n",
-    "    raise NotImplementedError\n",
+    "    t = 1\n",
+    "    current = problem\n",
+    "    n = len(problem.path)\n",
+    "    while True:\n",
+    "        temp = schedule(t)\n",
+    "        if temp < 1e-10:\n",
+    "            return current\n",
+    "        next_problem = problem.successors()[random.randint(0, n)]\n",
+    "        dE = next_problem.get_value() - current.get_value()\n",
+    "        if dE > 0:\n",
+    "            current = next_problem\n",
+    "        elif random.random() < np.exp(dE/temp):\n",
+    "            current = next_problem\n",
+    "        t += 1\n",
     "    "
    ]
   },
@@ -213,7 +226,12 @@
     "        In general, a path of N cities will have N neighbors (note that path wraps\n",
     "        around the end of the list between the first and last cities).\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        neighbors = []\n",
+    "        for i in range(-1, len(self.path)-1):\n",
+    "            self.path[i], self.path[i+1] = self.path[i+1], self.path[i]\n",
+    "            neighbors.append(TravelingSalesmanProblem(self.path))\n",
+    "            self.path[i], self.path[i+1] = self.path[i+1], self.path[i]\n",
+    "        return neighbors\n",
     "\n",
     "    def get_value(self):\n",
     "        \"\"\"Calculate the total length of the closed-circuit path of the current\n",
@@ -230,7 +248,11 @@
     "            (2) Remember to multiply the path length by -1 so that simulated\n",
     "            annealing finds the shortest path\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError"
+    "        value = 0.\n",
+    "        for i in range(-1, len(self.coords)-1):\n",
+    "            value += np.sqrt(np.square(self.coords[i][0] - self.coords[i+1][0]) + np.square(self.coords[i][1] - self.coords[i+1][1]))\n",
+    "            #value += abs(self.coords[i][0] - self.coords[i+1][0]) + abs(self.coords[i][1] - self.coords[i+1][1])\n",
+    "        return -value"
    ]
   },
   {
@@ -317,7 +339,7 @@
     "temperature=1e4\n",
     "\n",
     "def schedule(time):\n",
-    "    raise NotImplementedError"
+    "    return (alpha**time) * temperature"
    ]
   },
   {
@@ -418,23 +440,14 @@
     "\n",
     "Share and discuss your results with others in the forums!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:aind]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "conda-env-aind-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
